hamburger-menu empty

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
     <string name="title_currencies">Currencies</string>
     <string name="title_groups">Groups</string>
 
-
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
 
 </resources>
